Fix styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,18 @@
 .attendance-content li {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 5px 0px;
+}
+
+@media only screen and (max-width: 500px) {
+  .attendance-content li {
+    flex-direction: column;
+    margin: 0.5rem 0px;
+  }
+  .attendance-content .btn-list {
+    justify-content: end !important;
+  }
 }
 
 .attendance-content button.present.active {
@@ -22,4 +34,15 @@
 .attendance-content button.excused.active {
   background-color: #a35c00;
   color: #fff;
+}
+
+.attendance-content .btn-list {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.attendance-content button {
+  padding: 0rem 0.5rem;
+  margin: 0px;
 }
